--- a/src/app/home/home.landing.html
+++ b/src/app/home/home.landing.html
@@ -1,1 +1,437 @@
-<h1>{{ title }}</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <img src="../../assets/img/logo.png" width="190" height="40" id="solutions" />
+  <!--Nav row @right-->
+
+  <a class="navbar-brand" href="" id="menu">Home</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+    aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="products" id="menu">Products
+          <span class="sr-only">(current)</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" id="menu">Services</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" id="menu">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" id="menu">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/account/login" id="menu">Log in</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<!--CAROUSEL-->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="../../assets/img/pos-slide3.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../../assets/img/fmis-slide3.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../../assets/img/easyfis-slide3.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+<br>
+<h3>
+  <b>WELCOME TO INNOSOFT SOLUTIONS</b>
+  <br>
+  <b>
+    <small style="color:#4061B6;">We are making it simplier</small>
+  </b>
+</h3>
+
+<!--prod 1-->
+<div class="container-fluid" routerLink="products">
+  <div class="row row-offcanvas row-offcanvas-right">
+    <div class="col-12 col-md-4" style="background:#CACBBD;">
+      <br>
+      <img class="mr-3" src="../../assets/img/posIMAGE-1.png" width="350" height="290" alt="Generic placeholder image">
+
+
+
+      <div class="row">
+        <div class="col-6 col-lg-4">
+        </div>
+        <!--/span-->
+      </div>
+      <!--/row-->
+    </div>
+    <!--/span-->
+    <div class="col-6 col-md-8  sidebar-offcanvas" id="sidebar" style="background:#CACBBD;">
+      <br>
+
+      <img class="" src="../../assets/img/POSbrand2.png" width="120" alt="Generic placeholder image">
+      <p>
+        <b style="font-size: 18px;">Point-of-Sales (POS) System</b>
+        <b style="font-size:15px;">is a 3-in-1 software that caters to micro,small and medium sized business (MSMB). ts module includes Sales, Accounts
+          Receivable and Inventory,It is designed to be light and simplified to make users easily adapt and understand the
+          flow of opertaions yet powerful enoguh to gather vital information for making business decisions.</b>
+      </p>
+      <p>
+        <b style="font-size: 18px;">Point-of-Sales（POS）システム</b>
+        <b style="font-size:15px;">は、3-in-1ソフトウェアで、マイクロ、中小企業（MSMB）へtsモジュールには、売上、 売掛金、在庫が含まれています。ユーザは操作の流れを容易に適応させ、理解することができますが、ビジネス上の決定
+        </b>
+      </p>
+      <a href="#" class="btn btn-primary">View Details</a>
+
+    </div>
+    <!--/span-->
+  </div>
+  <!--/row-->
+</div>
+<!--/.container-->
+
+
+<!--prod 2  -->
+<div class="container-fluid" id="tech">
+  <div class="row row-offcanvas row-offcanvas-right">
+    <div class="col-12 col-md-4" style="background:#A7AE9E;">
+      <br>
+      <img class="mr-3" src="../../assets/img/easyfisIMAGE-4.png" width="300" height="200" alt="Generic placeholder image">
+
+
+
+      <div class="row">
+        <div class="col-6 col-lg-4">
+        </div>
+        <!--/span-->
+      </div>
+      <!--/row-->
+    </div>
+    <!--/span-->
+    <div class="col-6 col-md-8  sidebar-offcanvas" id="sidebar" style="background:#A7AE9E;">
+      <br>
+      <img class="" src="../../assets/img/EASYFISbrand2.png" width="120" alt="Generic placeholder image">
+
+      <p>
+        <b style="font-size: 18px;">Easy Financial Information System</b>
+        <b style="font-size:15px;">is a Cloud-based SAAS Application designed for rovust enterprise transactions that includes customer and sales management
+          , payables , supply-chain management,warehousing,Accountingand finance for trading business.With complete integration
+          to existing Innosoft POS.
+        </b>
+      </p>
+      <p>
+        <b style="font-size: 18px;">簡単な財務情報システム</b>
+        <b style="font-size:15px;">エンタープライズトランザクションのために設計されたクラウドベースのSAASアプリケーションです。 顧客および販売管理、未払い金 、サプライチェーン管理、倉庫保管、会計および財務を含 既存のInnosoftPOSと完全に統合されています。
+        </b>
+        <br>
+        <br>
+        <a href="#" class="btn btn-primary">View Details</a>
+      </p>
+
+
+    </div>
+    <!--/span-->
+  </div>
+  <!--/row-->
+</div>
+<!--/.container-->
+
+
+<!--prod 3-->
+<div class="container-fluid" id="tech">
+  <div class="row row-offcanvas row-offcanvas-right">
+    <div class="col-12 col-md-4" style="background:#CACBBD;">
+      <br>
+      <img class="mr-3" src="../../assets/img/fmisIMAGE2.png" width="300" height="240" alt="Generic placeholder image">
+
+
+
+      <div class="row">
+        <div class="col-6 col-lg-4">
+        </div>
+        <!--/span-->
+      </div>
+      <!--/row-->
+    </div>
+    <!--/span-->
+    <div class="col-6 col-md-8  sidebar-offcanvas" id="sidebar" style="background:#CACBBD;">
+      <br>
+      <img class="" src="../../assets/img/FMISbrand2.png" width="120" alt="Generic placeholder image">
+
+      <p>
+        <b style="font-size: 18px;">Financial Management Informtaion Sytem</b>
+        <b style="font-size:15px;">is designed for robust enterprise transactions that includes customer and sales management payables, supply-chain
+          managemnet ,warehousing , accounting and finance for trading business.
+        </b>
+      </p>
+      <p>
+        <b style="font-size: 18px;">財務管理インフォメーションシステム</b>
+        <b style="font-size:15px;">顧客および販売管理を含む堅牢なエンタープライズ・トランザクション用に設計されています 未払金、サプライチェーンマネジメント、倉庫保管、会計トレーディング業務のためのファイナンス。
+        </b>
+      </p>
+      <br>
+      <a href="#" class="btn btn-primary">View Details</a>
+
+    </div>
+    <!--/span-->
+  </div>
+  <!--/row-->
+</div>
+<!--/.container-->
+
+
+
+<!--prod 4-->
+<div class="container-fluid" id="tech">
+  <div class="row row-offcanvas row-offcanvas-right">
+    <div class="col-12 col-md-4" style="background:#A7AE9E;">
+      <br>
+      <img class="mr-3" src="../../assets/img/hrisIMAGE-1.png" width="320" height="240" alt="Generic placeholder image">
+
+
+
+      <div class="row">
+        <div class="col-6 col-lg-4">
+        </div>
+        <!--/span-->
+      </div>
+      <!--/row-->
+    </div>
+    <!--/span-->
+    <div class="col-6 col-md-8  sidebar-offcanvas" id="sidebar" style="background:#A7AE9E;">
+      <br>
+      <img class="" src="../../assets/img/HRISbrand2.png" width="120" alt="Generic placeholder image">
+
+      <p>
+        <b style="font-size: 18px;">Payroll and Human Resource Software</b>
+        <b style="font-size:15px;">is a comprehensive system for managing Employee Records from Attendance and Time Keeping to Payroll Designed for
+          large employee based pool with multiple geographically separated branches.</b>
+      </p>
+      <p>
+        <b style="font-size: 18px;">給与管理と人事管理ソフトウェア</b>
+        <b style="font-size:15px;">従業員レコードを出席管理から時間管理まで管理する包括的なシステムです。地理的に離れた複数の支店を持つ 大規模な従業員ベースのプール用に設計されています。
+        </b>
+        <br>
+        <br>
+        <a href="#" class="btn btn-primary">View Details</a>
+      </p>
+    </div>
+    <!--/span-->
+  </div>
+  <!--/row-->
+</div>
+<!--/.container-->
+
+
+
+
+<br>
+<br>
+<br>
+<br>
+<!--Services-->
+<div class="container-fluid" id="tech">
+  <div class="row row-offcanvas row-offcanvas-right">
+
+    <div class="col-6 col-md-9  sidebar-offcanvas" id="sidebar" style="background:#fff;">
+      <br>
+      <h4 class="display-7">
+        <b> SERVICES サービス</b>
+      </h4>
+      <ul>
+        <b>Angular JS CLI / HTML5/Typescript</b>
+        <br>
+        <br>
+
+        <ol style="line-height: 15px;">
+          <p>System Scope and Mock-up design.システムスコープとモックアップ設計。</p>
+        </ol>
+        <ol style="line-height: 15px;">
+          <p>Development and Technical Testing.開発と技術テスト。</p>
+        </ol>
+        <ol style="line-height: 15px;">
+          <p>Data loading and Functional Testing.開発と技術テスト。</p>
+        </ol>
+        <ol style="line-height: 15px;">
+          <p> Microsoft AzureとGithubを使用した継続的な展開。</p>
+        </ol>
+        <ol style="line-height: 15px;">
+          <p> Implementation and Go Live.実装とライブへ </p>
+        </ol>
+      </ul>
+    </div>
+    <div class="col-12 col-md-3" style="background:#fff ">
+
+      <img class="mr-3" src="../../assets/img/contuosDelivery.png" width="230" height="210" alt="Generic placeholder image">
+
+
+
+      <div class="row">
+        <div class="col-6 col-lg-4">
+        </div>
+        <!--/span-->
+      </div>
+      <!--/row-->
+    </div>
+    <!--/span-->
+    <!--/span-->
+  </div>
+  <!--/row-->
+</div>
+<!--/.container-->
+
+
+
+<br>
+<br>
+
+<!--Technology-->
+<div class="container-fluid" id="tech">
+  <div class="row row-offcanvas row-offcanvas-right">
+
+    <div class="col-6 col-md-5  sidebar-offcanvas" id="sidebar" style="background:#fff;">
+      <br>
+      <h4 class="display-7">
+        <b> TECHNOLOGY サービス</b>
+      </h4>
+      <ul>
+        <b>Angular JS CLI / HTML5/Typescript</b>
+        <b>Microsoft ASP.Net Web API</b>
+        <br>
+        <b>Azure Cloud</b>
+      </ul>
+    </div>
+    <div class="col-12 col-md-7 " style="background:#fff;">
+
+      <img class="mr-3" src="../../assets/img/angular.png" width="110" height="120" alt="Generic placeholder image">
+      <img class="mr-3" src="../../assets/img/ts.png" width="110" height="110" alt="Generic placeholder image">
+      <img class="mr-3" src="../../assets/img/asp.png" width="180" height="100" alt="Generic placeholder image">
+      <img class="mr-3" src="../../assets/img/azure.png" width="210" height="110" alt="Generic placeholder image">
+      <hr>
+      <div class="row">
+        <div class="col-6 col-lg-4">
+        </div>
+        <!--/span-->
+      </div>
+      <!--/row-->
+    </div>
+    <!--/span-->
+    <!--/span-->
+  </div>
+  <!--/row-->
+</div>
+<!--/.container-->
+<br>
+<br>
+<br>
+<!--Services-->
+<div class="container-fluid" id="tech">
+  <div class="row row-offcanvas row-offcanvas-right">
+
+    <div class="col-6 col-md-9  sidebar-offcanvas" id="sidebar" style="background:#fff;">
+      <br>
+      <h4 class="display-7">
+        <b> SERVICES サービス</b>
+      </h4>
+      <ul>
+        <b> A software development company established in April 24,2008. </b>
+        <br>
+        <small>2008年4月24日に設立されたソフトウェア開発会社。</small>
+        <br>
+        <b>100% Filipino owned and managed </b>
+        <br>
+        <small>100％フィリピンが所有し管理する</small>
+
+
+      </ul>
+    </div>
+    <div class="col-12 col-md-3" style="background:#fff ">
+
+      <img class="mr-3" src="../../assets/img/pinoyjapanese.png" width="230" height="210" alt="Generic placeholder image">
+
+
+      <div class="row">
+        <div class="col-6 col-lg-4">
+        </div>
+        <!--/span-->
+      </div>
+      <!--/row-->
+    </div>
+    <!--/span-->
+    <!--/span-->
+  </div>
+  <!--/row-->
+</div>
+<!--/.container-->
+
+
+  <hr>
+  <!--Overview-->
+<br><br><br><br><br>
+<main role="main">
+<div class="container-fluid">
+
+    <!-- Three columns of text below the carousel -->
+    <div class="row">
+      <div class="col-lg-2"><h5>2008</h5>
+        <img class="rounded-circle"  style="border:2px solid #fff;" src="../../assets/img/blue.png" alt="Generic placeholder image" width="40" height="40">
+        
+        <p>Est. 2008 <br>Created POs</p>
+
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-2"><h5>2010</h5>
+        <img class="rounded-circle"  style="border:2px solid blue;" rc="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="40" height="40">
+        <p>Created www.easyfis.com <br> Cloud SAAS product.</p>
+
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-2"><h5>2013</h5>
+        <img class="rounded-circle"  style="border:2px solid blue;" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="40" height="40">
+        <p>Became a PSIA <br> Member</p>
+      </div><!-- /.col-lg-4 -->
+     
+
+
+        
+        <div class="col-lg-2"><h5>2015</h5>
+          <img class="rounded-circle"  style="border:2px solid blue;" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="40" height="40">
+          <p>First Japanese Project<br>Bit.Ltd</p>
+  
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-2"><h5>2016</h5>
+          <img class="rounded-circle"  style="border:2px solid blue;" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="40" height="40">
+          <p>Became a CCCI<br>Member</p>
+  
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-2"><h5>2018</h5>
+          <img class="rounded-circle"  style="border:2px solid blue;" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="40" height="40">
+          <p>Partnered with<br> Japanese owned company to create mobile app.</p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->  
+    <hr class="featurette-divider">    
+  </div><!-- /.container -->
+
+
+  <!-- FOOTER -->
+  <footer class="container">
+    <p class="float-right"><a href="#">Back to top</a></p>
+    <p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  </footer>
+</main>
